changes to readme and package json

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "userdirectory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kulkdeepika.github.io/userdirectory",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "gh-pages": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -34,7 +34,9 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://kulkdeepika.github.io/userdirectory"
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
